--- a/Upgifter/1.1.4/inde.html
+++ b/Upgifter/1.1.4/inde.html
@@ -1,6 +1,6 @@
 <html>
  <head>
-  <title>Det är min första webbsida</title>
+  <title>Detta är min första webbsida</title>
  </head>
 
  <body> Hej på dej! Detta är min första webbsida.</body> 
