--- a/Upgifter/1.1.4/index.html
+++ b/Upgifter/1.1.4/index.html
@@ -3,5 +3,5 @@
   <title>Detta är min första webbsida</title>
  </head>
 
- <body> Hej på dej! Detta är min första webbsida.</body> 
+ <body> Hej på dej! Detta är min första webbsida</body> 
 </html>
