--- a/Upgifter/1.1.4/index.html
+++ b/Upgifter/1.1.4/index.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
  <head>
      <title> min första webbsida </title>
-
-     <body> Hej på dej! Detta är min första webbsida </body>
-
+ <body> Hej på dej! Detta är min första webbsida. </body>
  </body>
  </html
