--- a/Upgifter/1.1.6/index.html
+++ b/Upgifter/1.1.6/index.html
@@ -1,3 +1,4 @@
+<!Doctype
 <html>
  <head>
   <title>Mera rader!</title>
@@ -13,4 +14,4 @@ Detta är första raden<br>
  Sjunde raden<br>
  Åttonde raden<br>
  Nionde raden<br>
- Sista raden<br>
+ </html>
