--- a/Upgifter/1.1.6/index.html
+++ b/Upgifter/1.1.6/index.html
@@ -1,9 +1,8 @@
-<!Doctype
+<!DOCTYPE html>
 <html>
  <head>
   <title>Mera rader!</title>
 </head>
-
 <body>
 Detta är första raden<br>
  Andra raden<br>
@@ -15,4 +14,4 @@ Detta är första raden<br>
  Åttonde raden<br>
  Nionde raden<br>
 </body>
- </html>
+</html>
