--- a/Upgifter/1.1.4/index.html
+++ b/Upgifter/1.1.4/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
+<html>
  <head>
-     <title> min första webbsida </title>
- <body> Hej på dej! Detta är min första webbsida. </body>
- </body>
- </html>
+ <title> min första webbsida </title> 
+ </head>
+ <body> Hej på dej! Detta är min första webbsida.</body>
+</html>
