--- a/Upgifter/1.4.2/index.html
+++ b/Upgifter/1.4.2/index.html
@@ -5,6 +5,5 @@
  </head>
 </body>
   
- <h3> <h2> <strong> Hypertext Markup Language <em>(HTML) <em>  is <del> a programming language </del> the standard markup <p> language for documents designed to be displayed in a <u> web browser </u>. It can be assisted by technologies such as </h3> <h2> <strong> Cascading Style </strong> (CSS) 
- and scripting languages such as </h3> <h2> <strong> JavaScript (JS) </strong>. 
+<h1> <u> HTML </u> </h1> <strong> Hypertext Markup Language </strong> </h2> <em> (HTML) </em>  is <del> a programming language </del> the standard markup <br> language for documents designed to be displayed in a <u> web browser </u>. It can be assisted by <br> technologies such as <strong> Cascading Style </strong> </h3> <em>(CSS)</em> and scripting languages such as <br> <strong> JavaScript </strong> <em> (JS) </em>.
 </html>
