--- a/Upgifter/1.5.3/index (1).html
+++ b/Upgifter/1.5.3/index (1).html
@@ -6,6 +6,6 @@
 <body>
 <h1>Första Sidan</h1> 
 <p>I denna övning övar jag mig att skapa <strong>a-element</strong> 
-  <a href="index(2).html">Andra Sidan!</a>
+<a>Andra Sidan!</a>
 </body>
 </html>
