--- a/Upgifter/1.5.3/index.html
+++ b/Upgifter/1.5.3/index.html
@@ -3,9 +3,9 @@
  <head>
   <title>Första Sidan!</title>
 </head>
-<body>
+
 <h1>Första Sidan</h1> 
-<p> <h3> I denna övning övar jag mig att skapa </h2> <strong>a-element</strong> 
+<body> <p> <h3> I denna övning övar jag mig att skapa <strong>a-element</strong> </p>
 <a href= "Makke04/Upgifter/1.5.3/Makke04/Upgifter/1.5.3/index(2).html" > Andra Sidan! <br> </a> 
 </body>
 </html>
