--- a/Upgifter/1.5.3/index(2).html
+++ b/Upgifter/1.5.3/index(2).html
@@ -6,6 +6,6 @@
 <body>
   <h1>Andra Sidan</h1> 
 <p> <h3>  Detta är andra sidan för övningen med att använda <strong>a-element</strong> </h3>
-<a href= "Makke04/Upgifter/1.5.3/index.html" > Tillbaka!</a> 
+<a href= "https://makke04.github.io/Upgifter/1.5.3/index.html" > Tillbaka!</a> 
 </body>
 </html>
