--- a/Upgifter/1.4.2/index.html
+++ b/Upgifter/1.4.2/index.html
@@ -6,4 +6,5 @@
 </body>
   
 <h1> <u> HTML </u> </h1> <strong> Hypertext Markup Language </strong> </h2> <em> (HTML) </em>  is <del> a programming language </del> the standard markup <br> language for documents designed to be displayed in a <u> web browser </u>. It can be assisted by <br> technologies such as <strong> Cascading Style </strong> </h3> <em> (CSS) </em> and scripting languages such as <br> <strong> JavaScript </strong> <em> (JS) </em>.
+</body>
 </html>
