--- a/Upgifter/HTML Övning 1/index.html
+++ b/Upgifter/HTML Övning 1/index.html
@@ -5,3 +5,7 @@
  </head>
 </body>
 
+<p> <img src="banner.jpg" alt="bild av tangentbord" width="700" height="90">
+<p> <h2> Programmeringsresurser </h2>
+<hr>
+<h3>Program</h3>
