--- a/Upgifter/1.5.2/index.html
+++ b/Upgifter/1.5.2/index.html
@@ -5,9 +5,9 @@
  </head>
 </body>
 
-<body> <p> <u> <h2> <a href="https://google.com"> google</a> </h2>
-<h2> <a href="https://bing.com">bing </a>  </h2>
-<h2> <a href="https://duckduckgo.com/" >duckduckgo</a> </h2>
+<body> <h2> <a href="https://google.com"> google </a> </h2>
+<h2> <a href="https://bing.com">bing </a> </h2>
+<h2> <a href="https://duckduckgo.com/"> duckduckgo </a> </h2>
 
 </body>
 </html>
