--- a/Upgifter/1.5.3/index.html
+++ b/Upgifter/1.5.3/index.html
@@ -5,7 +5,7 @@
 </head>
 
 <h1>Första Sidan</h1> 
-<body> <p> <h3> I denna övning övar jag mig att skapa <strong>a-element</strong> </p>
-<a href= "https://makke04.github.io/Upgifter/1.5.3/index2.html" > Andra Sidan! <br> </a> 
+<body> <h3> I denna övning övar jag mig att skapa <strong>a-element</strong> 
+<a href= "https://makke04.github.io/Upgifter/1.5.3/index2.html"> Andra Sidan! <br> </a> 
 </body>
 </html>
