--- a/Upgifter/1.5.3/index2.html
+++ b/Upgifter/1.5.3/index2.html
@@ -5,7 +5,7 @@
 </head>
 <body>
   <h1>Andra Sidan</h1> 
-<p> <h3>  Detta är andra sidan för övningen med att använda <strong>a-element</strong> </h3>
+<p> Detta är andra sidan för övningen med att använda <strong>a-element</strong> 
 <a href= "https://makke04.github.io/Upgifter/1.5.3/index.html"> Tillbaka!</a> 
 </body>
 </html>
