--- a/Upgifter/1.6.1/index.html
+++ b/Upgifter/1.6.1/index.html
@@ -4,8 +4,8 @@
  <title> Roliga Bilder </title>
  </head>
 <body></body>
- <h1>  Roliga Bilder </h1>
- 
+   Roliga Bilder </h1>
+
 <p> <img src="cow.jpg" alt="Kossan slickar" width="500" height="300">
  <img src="horse.jpg" alt="Hästen ropar" width="200" height="300"> <br>
  <img src="wtf.jpg" alt="två statyer" width="705" height="500"> 
