--- a/Upgifter/1.6.1/index.html
+++ b/Upgifter/1.6.1/index.html
@@ -3,8 +3,8 @@
  <Head>
  <title> Roliga Bilder </title>
  </head>
-<body></body>
-   Roliga Bilder </h1>
+<body> 
+  <h1> Roliga Bilder </h1>
 
 <p> <img src="cow.jpg" alt="Kossan slickar" width="500" height="300">
  <img src="horse.jpg" alt="Hästen ropar" width="200" height="300"> <br>
