--- a/Upgifter/HTML Övning 1/index.html
+++ b/Upgifter/HTML Övning 1/index.html
@@ -9,6 +9,37 @@
 <p> <h2> Programmeringsresurser </h2>
 <hr>
 <h3>Program</h3>
-<table> <tr> <td> <a href="https://code.visualstudio.com/"> visualstudio code </a> köllkodsredigerare
-<table> <tr> <td> <a href="https://unity.com/"> Unity 
-<table> <tr> <td> <a href="https://git-scm.com/"> Git
+<table border="1"> 
+<tr> 
+  <td> <a href="https://code.visualstudio.com/"> visualstudio code </a> </td> 
+  <td>Kölkosredigerare</td>
+  </tr>
+  <tr> 
+  <td> <a href="https://unity.com/"> Unity </a> </td>
+  <td>Spelmotor. Med Unity kan man skapa spel.</td>
+  </tr>
+  <tr>
+  <td> <a href="https://git-scm.com/"> Git </a> </td>
+  <td>Versionshanteringsprogram</td>
+  </tr>
+  <tr> 
+</table>
+
+   
+<h3>Webbsidor</h3>
+<table border="1"> 
+<tr>
+<td> <a href="https://www.w3schools.com/"> w3schools </a> </td>
+<td>Webbsida som förklarar HTML, CSS och JavaScript</td>
+</tr>
+<tr> 
+<td> <a href="https://developer.mozilla.org/fi/"> MDN web docs </a> </td>
+<td>Refresh sida för HTML, CSS och JavaScript</td>
+</tr>
+<tr>
+<td> <a href="https://github.com/"> Github </a> </td>
+<td>Online versionshanteringsplatform dit man kan spara sina programmeringsprojekt</td>
+</tr>
+<tr>
+</body>
+</html>
