--- a/Upgifter/HTML Ovning 2/brod.html
+++ b/Upgifter/HTML Ovning 2/brod.html
@@ -4,20 +4,24 @@
  <title> Mina Recept </title>
  </head>
 </body>
-<p> <a href="index.html"> Tillbaka </a>  </p>
+ <p><a href="index.html"> Tillbaka </a></p>
 <img src="brod.jpg" alt="bild av brod" width="400" height="250">
 <h1> Lätt lantbröd </h1>
-<ul>
 <h2> Ingredienser </h2>
+<ul> 
 <li> 1 stor gul lök </li>
 <li> 25 g jäst </li>
+<li> 1 1/2-2 tsk salt</li>
 <li> 11 dl vetemjöl, gärna specialvetemjöl </li>
+</ul>
 <h2>Instruktioner</h2>
+<ol> 
 <li> Värm vattnet till ca 37°C, rör ut jästen och salt i vattnet. Blanda i mjöl. Arbeta ihop en smidig, lite kladdig deg. Låt jäsa under handduk i ca 45 min </li>
 <li> Forma till en limpa (för 1 bröd) och lägg på en smord bakplåt. Låt jäsa under handduk i ca 30 minuter. </li>
 <li> Sätt ugnen på 200°C. </li>
 <li> Grädda limpan i ca 35 minuter, plus eventuellt 5 minuter på max värme, för att få en knaprig skorpa. </li>
 <li> Låt svalna på galler och skär upp i grova skivor. </li>
-<p> <a href="index.html"> Tillbaka </a> </p>
+</ol>
+<p><a href="index.html"> Tillbaka </a></p>
 </body>
 </html>
