--- a/Upgifter/HTML Ovning 2/tomatsoppa.html
+++ b/Upgifter/HTML Ovning 2/tomatsoppa.html
@@ -4,12 +4,12 @@
  <title> Mina Recept </title>
  </head>
 </body>
-<p> <a href="index.html"> Tillbaka </a>  </p>
+<p> <a href="index.html"> Tillbaka </a> </p>
 <img src="tomatsoppa.jpg" alt="bild av tomatsoppa" width="300" height="200">
 <h1> Recept för Tomatsoppa </h1>
 <hr>
-<ul>
 <h2> Ingredienser (4 portioner) </h2>
+<ul> 
 <li> 1 stor gul lök </li>
 <li> smör till stekning </li>
 <li> 4 färska tomater </li>
@@ -19,14 +19,19 @@
 <li> 5 dl vatten </li>
 <li> salt och peppar </li>
 <li> 1 dl mellan- eller vispgrädde </li>
-<li> Basilikacrème </li>
+</ul>
+<h2> Basilikacrème </h2>
+<ul> 
 <li> 2 1/2 dl crème fraiche </li>
 <li> 1 kruka färsk basilika </li>
+</ul>
 <h2>Instruktioner</h2>
+<ul> 
 <li> Skala och hacka löken. Fräs den i lite matfett. </li>
 <li> Skär de färska tomaterna i små tärningar. Blanda lök, krossade tomater, färska tomater, tomatpuré, grönsaksbuljongtärningen och vatten i en rejäl kastrull. Låt koka ca 10 minuter. Smaka av med salt och peppar. </li>
 <li> Mixa allt med stavmixer eller i en matberedare. Späd med grädde för att få soppan krämig. </li>
 <li> Basilikacrème: Finhacka rejält med färska basilikablad och blanda med crème fraiche. Klicka i soppan strax före servering eller servera bredvid. </li>
+</ul>
 <p> <a href="index.html"> Tillbaka </a> </p>
 </body>
 </html>
