--- a/Upgifter/2.16 CSS Ovning/index.html
+++ b/Upgifter/2.16 CSS Ovning/index.html
@@ -15,13 +15,13 @@
 
     <div class="myDiv1"> <h3>  Då musen inte är över länken </div>
 
-    <div class="myDiv1"> </div>
+    <div class="myDiv1"> 
 
     <a href="https://www.youtube.com/?gl=FI&hl=fi">Länk</a> </h3> </div>
 
     <div class="myDiv2"> <h3>  Då musen är på länken </div>
 
-    <div class="myDiv2"> </div>
+    <div class="myDiv2"> 
 
     <a href="https://www.youtube.com/?gl=FI&hl=fi">Länk</a> </h3> </div>
 
