--- a/Upgifter/2.17 CSS Ovning/index.html
+++ b/Upgifter/2.17 CSS Ovning/index.html
@@ -1,3 +1,6 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
 <link rel="stylesheet" href="style.css">
   <title>CSS Övning 17</title>
     <meta charset="UTF-8"> 
