--- a/scriptclass/index.html
+++ b/scriptclass/index.html
@@ -5,19 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Rutsystem</title>
-
-    
-
-    <button onclick="myFunction()">pröva</button>
-
-    <p id="math"></p>
-
-    <script src="script.js"></script>
-   
-
+    <title>Class</title>
 </head>
 <body>
     
+    <script src="script.js"></script>
+   
+
 </body>
 </html>
